--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     type="submit" name="action" onclick="analyzeFile();">Analyze</button>
         </div>    
         <div id="chart_div"></div>
+        <div id="stats_div"></div>
     </div>
 </body>
 </html>
