--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/chart.css">
     <link rel="stylesheet" type="text/css" href="css/fileupload.css">
     <link rel="stylesheet" type="text/css" href="css/loaderbar.css">
+    <link rel="stylesheet" type="text/css" href="css/carousel.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -16,17 +18,19 @@
     <script type="text/javascript" src="./js/AppController.js"></script>
 </head>
 <body>
-    <div id="header_div" class="unloaded">
-        <h3>Sleep State Classifier</h3>
+    <div id="restart_div">
+        <button id="submit-btn" class="darken-2 btn-flat" type="submit" name="action" onclick="location.reload();"><i class="material-icons">arrow_back</i></button>
     </div>
-    <div class="body_div">
+    <div id="body_div" class="unloaded">
         <div id="upload_div">
-            <div id="file-upload" class="file-upload">
+            <div id="file-upload" class="file-upload">  
+              <h5>Select a sleep recording to analyze:</h5>
               <div class="file-select">
                 <div class="file-select-button" id="fileName">Choose File</div>
                 <div class="file-select-name" id="noFile">No file chosen...</div> 
                 <input type="file" name="chooseFile" id="chooseFile">
               </div>
+              <div id="analyze-btn"></div>
             </div>
             <script>
                 $("#chooseFile").bind("change", function() {
@@ -38,16 +42,18 @@
                   } else {
                     $(".file-upload").addClass("active");
                     $("#noFile").text(filename.replace("C:\\fakepath\\", ""));
-                    $('#submit-btn').removeClass("waves-effect waves-light disabled");
+                    $('#analyze-btn').empty();
+                    $('#analyze-btn').append('<button id="submit-btn" class="blue-grey white-text darken-2 btn-flat" type="submit" name="action" onclick="analyzeFile();">Analyze</button>');
                   }
-                });
+                }); 
             </script>
             <p id="demo"></p>
-            <button id="submit-btn" class="btn indigo waves-effect waves-light disabled" 
-                    type="submit" name="action" onclick="analyzeFile();">Analyze</button>
-        </div>    
-        <div id="chart_div"></div>
-        <div id="stats_div"></div>
+        </div>   
+        <div id="data">
+            <div id="timeline_chart_div"></div>
+            <div id="pie_chart_div"></div>
+            <div id="stats_div"></div>
+        </div>
     </div>
 </body>
 </html>
